[gd_scene load_steps=17 format=3 uid="uid://cdem2eb4ljqgl"]

[ext_resource type="Script" path="res://agents/goob/goob.gd" id="1_mr3g4"]
[ext_resource type="AudioStream" uid="uid://cwjsp3af4s6da" path="res://sound/goob-hit.wav" id="2_hpt0e"]
[ext_resource type="Shader" path="res://shaders/flash.gdshader" id="2_yx6g7"]
[ext_resource type="Texture2D" uid="uid://c41mycsxx2gxa" path="res://assets/heart-goob-attack-1.png" id="3_5w3ap"]
[ext_resource type="Texture2D" uid="uid://138vb6dr8m4a" path="res://assets/heart-goob-default-1.png" id="3_tvob4"]
[ext_resource type="Texture2D" uid="uid://d22jkyqcdml3j" path="res://assets/heart-goob-attack-2.png" id="4_7240t"]
[ext_resource type="Texture2D" uid="uid://dvt1qv0hr6rll" path="res://assets/heart-goob-default-2.png" id="4_glamq"]
[ext_resource type="PackedScene" uid="uid://ch5konsgo838k" path="res://scripts/damage_indicator.tscn" id="4_xgecd"]
[ext_resource type="Script" path="res://scripts/health.gd" id="5_14xvk"]
[ext_resource type="Texture2D" uid="uid://38kn2asi1if3" path="res://assets/heart-goob-blink-1.png" id="5_nhv5p"]
[ext_resource type="Texture2D" uid="uid://c00bcmhjur63u" path="res://assets/heart-goob-blink-2.png" id="6_5j2qs"]
[ext_resource type="BehaviorTree" uid="uid://c67jiwk4spbn6" path="res://agents/goob/goob.tres" id="11_q8vs6"]
[ext_resource type="AudioStream" uid="uid://b66ql7w0uf28b" path="res://sound/goob-death.wav" id="12_7f31x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onycp"]
shader = ExtResource("2_yx6g7")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_bey57"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("3_5w3ap")
}, {
"duration": 1.0,
"texture": ExtResource("4_7240t")
}],
"loop": true,
"name": &"attack_prepare",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7240t")
}],
"loop": true,
"name": &"attack_wave",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nhv5p")
}, {
"duration": 1.0,
"texture": ExtResource("6_5j2qs")
}, {
"duration": 1.0,
"texture": ExtResource("5_nhv5p")
}],
"loop": true,
"name": &"blink",
"speed": 2.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("3_tvob4")
}, {
"duration": 1.0,
"texture": ExtResource("4_glamq")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_mv3ne"]

[node name="Goob" type="StaticBody2D"]
script = ExtResource("1_mr3g4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_onycp")
sprite_frames = SubResource("SpriteFrames_bey57")
animation = &"attack_prepare"
frame_progress = 0.327845

[node name="DamageIndicator" parent="AnimatedSprite2D" instance=ExtResource("4_xgecd")]

[node name="Health" type="Node" parent="."]
script = ExtResource("5_14xvk")
max_health = 50.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-69, 55)
polygon = PackedVector2Array(-15, 68, 12, 77, 36, 71, 62, 58, -12, -19, -24, -20, -35, -15, -43, -5, -42, 10, -31, 20, -27, 55)

[node name="MouthMarker" type="Marker2D" parent="."]
position = Vector2(-100, 67)

[node name="BTPlayer" type="BTPlayer" parent="."]
behavior_tree = ExtResource("11_q8vs6")
blackboard_plan = SubResource("BlackboardPlan_mv3ne")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_7f31x")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_hpt0e")
